--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,5 +17,82 @@
     <div id="carrito"></div>
     </div>
     <script src="./main.js"></script>
+</body>
+</html>-->
+
+
+
+<!--<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tienda de Instrumentos Musicales</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Tienda de Instrumentos Musicales</h1>
+        <nav>
+            <ul id="menu">
+                <-- Aquí se generará dinámicamente el menú de tipos de instrumentos -->
+<!--            </ul>
+        </nav>
+    </header>
+
+    <main id="instrumentos">
+        -- Aquí se mostrarán dinámicamente los instrumentos -->
+<!--    </main>
+
+    <footer>
+        <p>&copy; 2024 Tienda de Instrumentos Musicales</p>
+    </footer>
+
+    <script src="main.js"></script>
+</body>
+</html> --> 
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tienda de Instrumentos Musicales</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Tienda de Instrumentos Musicales</h1>
+        <nav>
+            <ul id="menu">
+                <!-- Aquí se generará dinámicamente el menú de tipos de instrumentos -->
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="instrumentos">
+            <!-- Aquí se mostrarán dinámicamente los instrumentos -->
+        </section>
+        <aside>
+            <h2>Carrito de compras</h2>
+            <div id="carrito">
+                <!-- Aquí se mostrarán los productos en el carrito -->
+            </div>
+            <p id="total">Total: $0</p>
+            <button id="finalizarCompra">Finalizar compra</button>
+        </aside>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Tienda de Instrumentos Musicales</p>
+    </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
